--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block title %}Dashboard - Neural Sonic Genesis{% endblock %}
 
 {% block content %}
-<div class="container mx-auto px-6 pt-8 pb-16">
+<div class="container mx-auto px-6 pt-8 pb-16">board
     <!-- Dashboard Header -->
     <div class="flex items-center justify-between mb-12">
         <div>
